--- a/app/src/main/res/layout/activity_algebra1.xml
+++ b/app/src/main/res/layout/activity_algebra1.xml
@@ -7,7 +7,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.thait.mathetistics.Algebra1">
+    tools:context="com.example.thait.mathetistics.Algebra1"
+    android:background="@color/DarkBlue">
 
     <Button
         android:layout_width="wrap_content"
@@ -72,6 +73,7 @@
         android:textSize="15sp"
         android:layout_alignParentBottom="true"
         android:layout_toLeftOf="@+id/foil"
-        android:layout_toStartOf="@+id/foil" />
+        android:layout_toStartOf="@+id/foil"
+        android:onClick="back2"/>
 
 </RelativeLayout>
