--- a/app/src/main/res/layout/activity_topic_selection.xml
+++ b/app/src/main/res/layout/activity_topic_selection.xml
@@ -30,7 +30,8 @@
         android:id="@+id/button"
         android:layout_below="@+id/textView"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="25dp" />
+        android:layout_marginTop="25dp"
+        android:onClick="toAlgebra1"/>
 
     <Button
         android:layout_width="wrap_content"
@@ -41,7 +42,8 @@
         android:id="@+id/button2"
         android:layout_below="@+id/button"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="25dp"/>
+        android:layout_marginTop="25dp"
+        android:onClick="toGeometry"/>
 
     <Button
         android:layout_width="wrap_content"
@@ -52,7 +54,8 @@
         android:textSize="30sp"
         android:layout_below="@+id/button2"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="25dp" />
+        android:layout_marginTop="25dp"
+        android:onClick="toAlgebra2"/>
 
     <Button
         android:layout_width="wrap_content"
@@ -63,7 +66,8 @@
         android:textSize="30sp"
         android:layout_below="@+id/button3"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="25dp" />
+        android:layout_marginTop="25dp"
+        android:onClick="toCalculus"/>
 
     <Button
         style="?android:attr/buttonStyleSmall"
@@ -75,7 +79,8 @@
         android:textSize="30sp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:onClick="quitL"/>
 
     <Button
         style="?android:attr/buttonStyleSmall"
@@ -87,7 +92,8 @@
         android:textSize="30sp"
         android:layout_alignTop="@+id/button5"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:onClick="backT"/>
 
     <Button
         android:layout_width="wrap_content"
