--- a/app/src/main/res/layout/activity_calculus.xml
+++ b/app/src/main/res/layout/activity_calculus.xml
@@ -7,6 +7,27 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.thait.mathetistics.Calculus">
+    tools:context="com.example.thait.mathetistics.Calculus"
+    android:background="@color/teal">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Calculus"
+        android:id="@+id/title"
+        android:textColor="@color/OrangeRed"
+        android:textSize="50dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/title"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:background="@color/white">
+
+    </LinearLayout>
 </RelativeLayout>
