--- a/app/src/main/res/layout/activity_topic_selection.xml
+++ b/app/src/main/res/layout/activity_topic_selection.xml
@@ -16,7 +16,7 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Welcome!"
         android:textSize="50dp"
-        android:textColor="@color/black"
+        android:textColor="@color/Tomato"
         android:id="@+id/textView"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
@@ -80,20 +80,8 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:onClick="quitL"/>
-
-    <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Back"
-        android:id="@+id/button6"
-        android:textColor="@color/red"
-        android:textSize="30sp"
-        android:layout_alignTop="@+id/button5"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:onClick="backT"/>
+        android:onClick="quitL"
+        android:background="@color/DarkBlue"/>
 
     <Button
         android:layout_width="wrap_content"
