--- a/app/src/main/res/layout/activity_compete.xml
+++ b/app/src/main/res/layout/activity_compete.xml
@@ -63,7 +63,7 @@
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Log Out"
+        android:text="Log out"
         android:id="@+id/button7"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
