--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,12 +6,29 @@
     tools:context="com.example.thait.mathetistics.MainActivity"
     android:background="@color/DarkBlue">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:padding="15dp"
+        android:background="#A4A4A4">
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="2dp"
+            android:text="Welcome"
+            android:textSize="25sp"
+            android:textColor="@color/white"
+            android:textStyle="bold"/>
+    </LinearLayout>
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginTop="40dp">
 
         <EditText
             android:layout_width="match_parent"
@@ -19,7 +36,8 @@
             android:layout_marginTop="70dp"
             android:layout_marginLeft="80dp"
             android:layout_marginRight="80dp"
-            android:text="Username"
+            android:hint="Username"
+            android:textColorHint="@color/white"
             android:id="@+id/username"/>
 
         <EditText
@@ -28,7 +46,8 @@
             android:layout_marginTop="20dp"
             android:layout_marginLeft="80dp"
             android:layout_marginRight="80dp"
-            android:text="Password"
+            android:hint="Password"
+            android:textColorHint="@color/white"
             android:id="@+id/password"/>
 
         <LinearLayout
@@ -41,12 +60,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Log In"
+                android:textColor="@color/white"
                 android:id="@+id/Login"
-                android:layout_marginLeft="80dp"/>
+                android:layout_marginLeft="80dp"
+                android:background="@color/blue"/>
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Sign Up"
+                android:textColor="@color/blue"
                 android:layout_marginLeft="40dp"
                 android:onClick="register"/>
         </LinearLayout>
