--- a/app/src/main/res/layout/activity_choice.xml
+++ b/app/src/main/res/layout/activity_choice.xml
@@ -8,7 +8,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.thait.mathetistics.Choice"
-    android:background="@color/black">
+    android:background="@color/DarkBlue">
 
     <TextView
         android:layout_width="wrap_content"
@@ -17,17 +17,23 @@
         android:text="Username"
         android:id="@+id/textView2"
         android:textColor="@color/Gold"
-        android:textSize="30dp" />
+        android:textSize="25sp" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_marginTop="80dp"
+        android:layout_below="@+id/textView2">
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Go Compete"
+        android:text="Ranked Challenge"
         android:id="@+id/compete"
-        android:textColor="@color/white"
-        android:textSize="30sp"
-        android:background="@color/black"
+        android:textColor="@color/blue"
+        android:textSize="25sp"
         android:onClick="compete"
+        android:layout_gravity="center"
         android:layout_above="@+id/learn"
         android:layout_alignLeft="@+id/learn"
         android:layout_alignStart="@+id/learn" />
@@ -37,12 +43,14 @@
         android:layout_height="wrap_content"
         android:text="Go Learn"
         android:id="@+id/learn"
-        android:textColor="@color/white"
+        android:textColor="@color/blue"
         android:textSize="30sp"
-        android:background="@color/black"
         android:onClick="learn"
+        android:layout_marginTop="20dp"
+        android:layout_gravity="center"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"/>
+    </LinearLayout>
 
     <Button
         style="?android:attr/buttonStyleSmall"
@@ -54,7 +62,7 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:textColor="@color/lime"
-        android:background="@color/black"
+        android:background="@color/DarkBlue"
         android:textSize="20dp"
         android:onClick="logout"/>
 
