--- a/app/src/main/res/layout/activity_compete.xml
+++ b/app/src/main/res/layout/activity_compete.xml
@@ -43,14 +43,14 @@
         android:textSize="30sp"
         android:background="@color/black"
         android:onClick="Problems"
-        android:layout_above="@+id/learn"
+        android:layout_above="@+id/ranked"
         android:layout_centerHorizontal="true"/>
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Display Ranking"
-        android:id="@+id/learn"
+        android:id="@+id/ranked"
         android:textColor="@color/white"
         android:textSize="30sp"
         android:background="@color/black"
@@ -58,6 +58,19 @@
         android:layout_centerVertical="true"
         android:layout_alignLeft="@+id/compete"
         android:layout_alignStart="@+id/compete" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Add a Question"
+        android:textColor="@color/white"
+        android:textSize="30sp"
+        android:background="@color/black"
+        android:onClick="addQuestion"
+        android:layout_centerVertical="true"
+        android:layout_alignLeft="@+id/compete"
+        android:layout_alignStart="@+id/compete"
+        android:layout_below="@+id/ranked"/>
 
     <Button
         style="?android:attr/buttonStyleSmall"
