--- a/app/src/main/res/layout/activity_compete.xml
+++ b/app/src/main/res/layout/activity_compete.xml
@@ -3,12 +3,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.thait.mathetistics.Compete"
-    android:background="@color/black">
+    android:background="#2196F3">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:padding="15dp"
+        android:background="#A4A4A4">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="2dp"
+            android:text="Welcome"
+            android:textSize="25sp"
+            android:textColor="@color/white"
+            android:textStyle="bold"/>
+    </LinearLayout>
 
     <TextView
         android:layout_width="wrap_content"
@@ -16,7 +30,7 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Username"
         android:id="@+id/textView2"
-        android:layout_marginTop="67dp"
+        android:layout_marginTop="80dp"
         android:textColor="@color/Gold"
         android:textSize="30dp"
         android:layout_alignLeft="@+id/compete"
@@ -39,9 +53,8 @@
         android:layout_height="wrap_content"
         android:text="Do Exercise"
         android:id="@+id/compete"
-        android:textColor="@color/white"
+        android:textColor="@color/blue"
         android:textSize="30sp"
-        android:background="@color/black"
         android:onClick="Problems"
         android:layout_above="@+id/ranked"
         android:layout_centerHorizontal="true"/>
@@ -51,9 +64,8 @@
         android:layout_height="wrap_content"
         android:text="Display Ranking"
         android:id="@+id/ranked"
-        android:textColor="@color/white"
+        android:textColor="@color/blue"
         android:textSize="30sp"
-        android:background="@color/black"
         android:onClick="ranked"
         android:layout_centerVertical="true"
         android:layout_alignLeft="@+id/compete"
@@ -63,9 +75,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Add a Question"
-        android:textColor="@color/white"
+        android:textColor="@color/blue"
         android:textSize="30sp"
-        android:background="@color/black"
         android:onClick="addQuestion"
         android:layout_centerVertical="true"
         android:layout_alignLeft="@+id/compete"
@@ -81,8 +92,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:textColor="@color/lime"
-        android:background="@color/black"
+        android:textColor="@color/Red"
         android:textSize="20dp"
         android:onClick="logoutC"/>
 
