--- a/app/src/main/res/layout/activity_scored.xml
+++ b/app/src/main/res/layout/activity_scored.xml
@@ -8,7 +8,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.thait.mathetistics.Scored"
-    android:background="@color/black">
+    android:background="#2196F3">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -41,8 +41,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:textColor="@color/lime"
-        android:background="@color/black"
+        android:textColor="@color/blue"
         android:textSize="20dp"
         android:onClick="done"/>
 
