--- a/app/src/main/res/layout/activity_topic_selection.xml
+++ b/app/src/main/res/layout/activity_topic_selection.xml
@@ -3,12 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.thait.mathetistics.TopicSelection"
-    android:background="@color/DarkBlue">
+    android:background="#2196F3">
 
     <LinearLayout
         android:id="@+id/header"
