--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -18,7 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="2dp"
-            android:text="Welcome"
+            android:text="Math Relay!"
             android:textSize="25sp"
             android:textColor="@color/white"
             android:textStyle="bold"/>
