--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -19,7 +19,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="2dp"
-            android:text="SIGN UP"
+            android:text="Sign Up"
             android:textSize="25sp"
             android:textColor="@color/white"
             android:textStyle="bold"/>
